# lfnp_daq

./: .env_reference  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  db.py
backend/app/models/: auth.py  daq.py  hardware.py  sensor.py  settings.py
backend/app/routes/: daq.py  hardware.py  login.py  sensor.py  settings.py  system.py  users.py
daq/: .dockerignore  Dockerfile  README.md  install_CAEN.sh  pyproject.toml
daq/daq/: __init__.py  data_writer.py  db.py  fsm.py  main.py  models.py  power_interface.py  routes.py  scans.py  websocket.py
daq/daq/ps_interface/: __init__.py  caen_ps_interface.py
daq/daq/scans/: __init__.py  scans.py
frontend/: Dockerfile  Dockerfile.dev  README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: api.ts  auth.ts  toast.ts
frontend/src/lib/components/: LoginButton.svelte  ToastContainer.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[...catchall]/: +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/hardware/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/scans/: +page.svelte
frontend/src/routes/scans/[id]/: +page.svelte
frontend/src/routes/sensors/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/test/: +page.svelte
